--- a/package.json
+++ b/package.json
@@ -118,9 +118,10 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
-  "overrides": {
-    "esbuild": "^0.25.0",
-    "path-to-regexp": "^6.2.3",
-    "undici": "^6.20.0"
-  }
+      "overrides": {
+        "esbuild": "^0.25.0",
+        "path-to-regexp": "^6.2.3",
+        "undici": "^6.20.0",
+        "form-data": "^4.0.4"
+      }
 }
